--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -74,6 +74,7 @@
 
             </LinearLayout>
 
+
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
@@ -267,13 +268,14 @@
 
                 <ImageView
                     android:id="@+id/photo_edit_profile"
-                    android:src="@drawable/icon_foto"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"/>
+                    android:layout_width="88dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/icon_foto" />
 
             </com.github.florent37.shapeofview.shapes.CircleView>
 
             <Button
+                android:id="@+id/btn_upImg"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="55dp"
