--- a/app/src/main/res/layout/activity_rekam_medis.xml
+++ b/app/src/main/res/layout/activity_rekam_medis.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.adminquickmed.ArticleActivity">
+    tools:context="com.example.adminquickmed.RekamMedisActivity">
 
 
     <com.google.android.material.appbar.AppBarLayout
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
     </com.google.android.material.appbar.AppBarLayout>
-    <include layout="@layout/layout_artikel"/>
+    <include layout="@layout/layout_rekam_medis"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/buttonUpload"
