--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgPrimary"
-    tools:context=".EditProfileActivity">
+    tools:context=".EditProfileAct">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -74,7 +74,6 @@
 
             </LinearLayout>
 
-
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
@@ -91,7 +90,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView2">
 
                 <LinearLayout
-                    android:layout_marginTop="120dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
@@ -104,11 +102,42 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="12dp"
                         android:fontFamily="@font/mlight"
-                        android:text="Name"
+                        android:text="Nama"
                         android:textColor="@color/grayPrimary"
                         android:textSize="20sp" />
 
                     <EditText
+                        android:id="@+id/txt_nama"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:background="@drawable/bg_input_edit"
+                        android:fontFamily="@font/mmedium"
+                        android:inputType="text"
+                        android:lines="1"
+                        android:paddingLeft="12dp"
+                        android:textColor="@color/blackPrimary" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="24dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:fontFamily="@font/mlight"
+                        android:text="Alamat"
+                        android:textColor="@color/grayPrimary"
+                        android:textSize="20sp" />
+
+                    <EditText
+                        android:id="@+id/txt_alamat"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:background="@drawable/bg_input_edit"
@@ -138,11 +167,12 @@
                         android:textSize="20sp" />
 
                     <EditText
+                        android:id="@+id/txt_email"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:background="@drawable/bg_input_edit"
                         android:fontFamily="@font/mmedium"
-                        android:inputType="text"
+                        android:inputType="textEmailAddress"
                         android:lines="1"
                         android:paddingLeft="12dp"
                         android:textColor="@color/blackPrimary" />
@@ -162,11 +192,12 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="12dp"
                         android:fontFamily="@font/mlight"
-                        android:text="Last Name"
+                        android:text="Golongan Darah"
                         android:textColor="@color/grayPrimary"
                         android:textSize="20sp" />
 
                     <EditText
+                        android:id="@+id/txt_goldar"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:background="@drawable/bg_input_edit"
@@ -196,6 +227,7 @@
                         android:textSize="20sp" />
 
                     <EditText
+                        android:id="@+id/txt_username"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:background="@drawable/bg_input_edit"
@@ -224,6 +256,7 @@
                         android:textSize="20sp" />
 
                     <EditText
+                        android:id="@+id/txt_password"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:background="@drawable/bg_input_edit"
@@ -237,61 +270,8 @@
 
             </LinearLayout>
 
-            <View
-                android:id="@+id/view4"
-                android:layout_width="108dp"
-                android:layout_height="108dp"
-                android:layout_marginTop="24dp"
-                android:background="@drawable/bg_view_circle_picture"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/linearLayout" />
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:src="@drawable/icon_nopic"
-                app:layout_constraintBottom_toBottomOf="@+id/view4"
-                app:layout_constraintEnd_toEndOf="@+id/view4"
-                app:layout_constraintStart_toStartOf="@+id/view4"
-                app:layout_constraintTop_toTopOf="@+id/view4" />
-
-            <com.github.florent37.shapeofview.shapes.CircleView
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                app:layout_constraintBottom_toBottomOf="@+id/view4"
-                app:layout_constraintEnd_toEndOf="@+id/view4"
-                app:layout_constraintStart_toStartOf="@+id/view4"
-                app:layout_constraintTop_toTopOf="@+id/view4">
-
-                <ImageView
-                    android:id="@+id/photo_edit_profile"
-                    android:layout_width="88dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/icon_foto" />
-
-            </com.github.florent37.shapeofview.shapes.CircleView>
-
             <Button
-                android:id="@+id/btn_upImg"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="55dp"
-                android:layout_marginBottom="24dp"
-                android:background="@drawable/bg_btn_plus"
-                android:fontFamily="@font/mmedium"
-                android:text="+"
-                android:textColor="#FFF"
-                android:textSize="22sp"
-                app:layout_constraintBottom_toBottomOf="@+id/view4"
-                app:layout_constraintEnd_toEndOf="@+id/view4"
-                app:layout_constraintStart_toStartOf="@+id/view4"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-
-            <Button
-                android:id="@+id/btn_continue"
+                android:id="@+id/btn_save"
                 android:layout_width="250dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="24dp"
