--- a/app/src/main/res/layout/activity_login_chat.xml
+++ b/app/src/main/res/layout/activity_login_chat.xml
@@ -1,89 +1,118 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
-    android:padding="@dimen/padding_login"
-    android:background="@color/gradientblue"
     android:orientation="vertical"
+    android:background="@drawable/bg_gradient_primary"
+    android:padding="@dimen/padding_login"
     tools:context=".LoginChatActivity">
 
-
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:textSize="36sp"
-        android:text="Login"
-        android:textStyle="bold"
-        android:textColor="@color/colorAccent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"/>
-
-
-    <com.google.android.material.textfield.TextInputLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/editbox_background_normal"
-        android:layout_marginTop="15dp">
-
-        <EditText
-            android:id="@+id/edtEmail"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:maxLength="40"
-            android:ems="10"
-            android:hint="Enter your email"
-            android:inputType="textEmailAddress" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="40sp"
+                android:text="Login Chat"
+                android:layout_gravity="center_horizontal"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="50dp"
+                android:layout_centerHorizontal="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/mlight"
+                android:text="Email"
+                android:textColor="@color/grayPrimary"
+                android:textSize="20sp" />
+
+            <com.example.adminquickmed.EditWithClearText
+                android:id="@+id/edtEmail"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/bg_input_edit"
+                android:padding="15dp"
+                android:fontFamily="@font/mmedium"
+                android:inputType="text"
+                android:lines="1"
+                android:paddingLeft="12dp"
+                android:textColor="@color/blackPrimary"/>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="1dp"
-        app:passwordToggleEnabled="true"
-        android:layout_marginTop="5dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/mlight"
+                android:text="Password"
+                android:textColor="@color/grayPrimary"
+                android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/edtPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:maxLength="12"
-            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
-            android:inputType="textFilter"
-            android:background="@android:drawable/editbox_background_normal"
-            android:hint="Enter your password" />
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutTextInput"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:textColorHint="#8F8B8B"
+                app:passwordToggleDrawable="@drawable/show_password_selector"
+                app:passwordToggleEnabled="true">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/bg_input_edit"
+                    android:fontFamily="@font/mmedium"
+                    android:inputType="textPassword"
+                    android:lines="1"
+                    android:padding="15dp"
+                    android:paddingLeft="12dp"
+                    android:textColor="@color/blackPrimary"
+                    android:id="@+id/edtPassword"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-    <Button
-        style="@style/Base.Widget.AppCompat.Button"
-        android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:background="@color/colorAccent"
-        android:layout_marginTop="40dp"
-        android:text="Login" />
 
-    <TextView
-        android:id="@+id/txtSignUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginTop="25dp"
-        android:background="@android:drawable/editbox_background_normal"
-        android:textColor="@color/colorAccent"
-        android:gravity="center_horizontal"
-        android:text="New user? Sign up here" />
+            <Button
+                android:id="@+id/btnLogin"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginRight="24dp"
+                android:background="@drawable/bg_btn_primary"
+                android:fontFamily="@font/mregular"
+                android:text="Submit"
+                android:textAllCaps="false"
+                android:textColor="#FFF"
+                android:textSize="22sp" />
 
+            <TextView
+                android:id="@+id/txtSignUp"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginTop="25dp"
+                android:background="@android:drawable/editbox_background_normal"
+                android:textColor="@color/colorAccent"
+                android:gravity="center_horizontal"
+                android:text="New user? Sign up here" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
+
+
+
