--- a/app/src/main/res/layout/activity_signup_chat.xml
+++ b/app/src/main/res/layout/activity_signup_chat.xml
@@ -23,127 +23,99 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="40sp"
-                android:text="Sign Up"
+                android:text="Sign Up Chat"
                 android:layout_gravity="center_horizontal"
                 android:textStyle="bold"
                 android:textColor="@color/colorAccent"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="20dp" >
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/mlight"
+                android:text="Email"
+                android:textColor="@color/grayPrimary"
+                android:textSize="20sp" />
 
-                <EditText
-                    android:id="@+id/edtFirstName"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="First Name"
-                    android:background="@android:drawable/editbox_background_normal"
-                    android:inputType="textEmailAddress"
-                    android:maxLength="12" />
-
-                <EditText
-                    android:id="@+id/edtLastName"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="Last Name"
-                    android:background="@android:drawable/editbox_background_normal"
-                    android:inputType="textEmailAddress"
-                    android:maxLength="12" />
-
-            </LinearLayout>
-
-            <EditText
+            <com.example.adminquickmed.EditWithClearText
                 android:id="@+id/edtEmail"
                 android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/bg_input_edit"
+                android:padding="15dp"
+                android:fontFamily="@font/mmedium"
+                android:inputType="text"
+                android:lines="1"
+                android:paddingLeft="12dp"
+                android:textColor="@color/blackPrimary"/>
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:background="@android:drawable/editbox_background_normal"
-                android:ems="10"
-                android:hint="Your valid email"
-                android:inputType="textEmailAddress"
-                android:maxLength="40" />
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/mlight"
+                android:text="Username"
+                android:textColor="@color/grayPrimary"
+                android:textSize="20sp" />
 
-            <EditText
+            <com.example.adminquickmed.EditWithClearText
                 android:id="@+id/edtUsername"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:background="@android:drawable/editbox_background_normal"
-                android:ems="10"
-                android:hint="Select username"
-                android:maxLength="15" />
+                android:layout_height="50dp"
+                android:background="@drawable/bg_input_edit"
+                android:padding="15dp"
+                android:fontFamily="@font/mmedium"
+                android:inputType="text"
+                android:lines="1"
+                android:paddingLeft="12dp"
+                android:textColor="@color/blackPrimary"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/mlight"
+                android:text="Password"
+                android:textColor="@color/grayPrimary"
+                android:textSize="20sp" />
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutTextInput"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
+                android:textColorHint="#8F8B8B"
+                app:passwordToggleDrawable="@drawable/show_password_selector"
                 app:passwordToggleEnabled="true">
 
-                <EditText
-                    android:id="@+id/edtPassword"
+                <androidx.appcompat.widget.AppCompatEditText
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:ems="10"
-                    android:maxLength="12"
-                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
+                    android:layout_height="50dp"
+                    android:background="@drawable/bg_input_edit"
+                    android:fontFamily="@font/mmedium"
                     android:inputType="textPassword"
-                    android:background="@android:drawable/editbox_background_normal"
-                    android:hint="Choose password" />
+                    android:lines="1"
+                    android:padding="15dp"
+                    android:paddingLeft="12dp"
+                    android:textColor="@color/blackPrimary"
+                    android:id="@+id/edtPassword"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Gender:"
-                    android:layout_gravity="center_vertical"/>
-
-                <RadioGroup
-                    android:id="@+id/rdbGroup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginStart="10dp">
-                    <RadioButton
-                        android:id="@+id/rdbMale"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Male"/>
-
-                    <RadioButton
-                        android:id="@+id/rdbFemale"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:text="Female"/>
-                </RadioGroup>
-            </LinearLayout>
 
             <Button
-                style="@style/Base.Widget.AppCompat.Button"
                 android:id="@+id/btnSubmit"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
-                android:background="@color/colorAccent"
-                android:layout_marginTop="45dp"
-                android:text="Submit" />
+                android:layout_height="50dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginRight="24dp"
+                android:background="@drawable/bg_btn_primary"
+                android:fontFamily="@font/mregular"
+                android:text="Submit"
+                android:textAllCaps="false"
+                android:textColor="#FFF"
+                android:textSize="22sp" />
 
 
         </LinearLayout>
