--- a/app/src/main/res/layout/layout_rekam_medis.xml
+++ b/app/src/main/res/layout/layout_rekam_medis.xml
@@ -19,7 +19,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Pilih Resep"
+        android:text="Masukkan Resep"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
